# vectoria

./: .gitignore  README.md  encodeLevels.cpp  encodeLevels.sh
3ds/: Makefile
3ds/source/: collisions.cpp  collisions.hpp  letters.hpp  lineList.cpp  lineList.hpp  main.cpp  textDraw.cpp  textDraw.hpp
data/: basemath.cpp  basemath.hpp  buttons.cpp  buttons.hpp  collisions.cpp  collisions.hpp  letters.cpp  letters.hpp  line.hpp  lineList.cpp  lineList.hpp  lineListNintendo.cpp  lineListNintendo.hpp  lineListSony.cpp  lineListSony.hpp
include/: brotli-cpp.hpp
levels/: level0.compressed.txt  level0.txt  level1.compressed.txt  level1.txt  level2.compressed.txt  level2.txt  level3.compressed.txt  level3.txt  level4.compressed.txt  level4.txt  level5.compressed.txt  level5.txt  level6.compressed.txt  level6.txt  level7.compressed.txt  level7.txt  level8.compressed.txt  level8.txt  level9.compressed.txt  level9.txt
lineGameTest/: collisions.pde  lineGameTest.pde  linelist.pde
vita/: CMakeLists.txt  Makefile
vita/include/: textDraw.hpp
vita/src/: main.cpp  textDraw.cpp  textDraw.hpp
